--- a/src/main/resources/ui/auth/Signup.fxml
+++ b/src/main/resources/ui/auth/Signup.fxml
@@ -13,57 +13,51 @@
 <?import javafx.scene.text.Text?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.upe.controller.RegisterController">
-   <top>
-      <AnchorPane prefHeight="164.0" prefWidth="900.0" style="-fx-background-color: #515151;" BorderPane.alignment="CENTER">
+   <center>
+      <AnchorPane prefHeight="637.0" prefWidth="574.0" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fx:id="halterImageView" fitHeight="116.0" fitWidth="113.0" layoutX="394.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="700.0" fitWidth="900.0" pickOnBounds="true">
                <image>
-                  <Image url="/images/563828.png" />
+                  <Image url="@../../images/behang-met-dumbells-en-gewichten.png" />
                </image>
             </ImageView>
-         </children>
-      </AnchorPane>
-   </top>
-   <center>
-      <AnchorPane fx:id="confirmeSenhaField" prefHeight="436.0" prefWidth="486.0" style="-fx-background-color: #515151;" BorderPane.alignment="CENTER">
-         <children>
-            <Pane layoutX="43.0" prefHeight="438.0" prefWidth="418.0" style="-fx-background-color: #FFFFFF; -fx-background-radius: 15;">
+            <AnchorPane layoutX="225.0" layoutY="-2.0" prefHeight="700.0" prefWidth="450.0" style="-fx-background-color: #515151;">
                <children>
-                  <Label layoutX="56.0" layoutY="100.0" prefHeight="28.0" prefWidth="90.0" text="Nome completo" />
-                  <Label layoutX="56.0" layoutY="162.0" prefHeight="28.0" prefWidth="90.0" text="E-mail" />
-                  <TextField fx:id="emailTextField" layoutX="56.0" layoutY="190.0" prefHeight="26.0" prefWidth="307.0" promptText="E-mail" />
-                  <Label layoutX="56.0" layoutY="223.0" prefHeight="28.0" prefWidth="90.0" text="Senha" />
-                  <Label layoutX="56.0" layoutY="284.0" prefHeight="28.0" prefWidth="106.0" text="Confirme a senha" />
-                  <PasswordField fx:id="setSenhaField" layoutX="56.0" layoutY="250.0" prefHeight="26.0" prefWidth="307.0" promptText="Senha" />
-                  <PasswordField fx:id="senhaTextField" layoutX="56.0" layoutY="312.0" prefHeight="26.0" prefWidth="307.0" promptText="Confirme a senha" />
-                  <Button fx:id="cadastroBotao" layoutX="142.0" layoutY="356.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="134.0" style="-fx-background-color: #FFDE21;" text="Cadastrar" onAction="#onCadastrar">
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font>
-                  </Button>
-                  <Button fx:id="voltarBotao" layoutX="183.0" layoutY="391.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="53.0" style="-fx-background-color: #808080;" text="Voltar" textFill="#f7f7f7" onAction="#onVoltar">
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font>
-                  </Button>
-                  <TextField fx:id="nomeCompletoTextField" layoutX="56.0" layoutY="128.0" prefHeight="26.0" prefWidth="307.0" promptText="Nome" />
-                  <Text layoutX="116.0" layoutY="69.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Gym System" textAlignment="CENTER" wrappingWidth="186.93673706054688">
-                     <font>
-                        <Font size="33.0" />
-                     </font>
-                  </Text>
+                  <Pane layoutX="35.0" layoutY="192.0" prefHeight="438.0" prefWidth="379.0" style="-fx-background-color: #FFFFFF; -fx-background-radius: 15;">
+                     <children>
+                        <Label layoutX="36.0" layoutY="94.0" prefHeight="28.0" prefWidth="90.0" text="Nome completo" />
+                        <Label layoutX="36.0" layoutY="156.0" prefHeight="28.0" prefWidth="90.0" text="E-mail" />
+                        <TextField fx:id="emailTextField" layoutX="36.0" layoutY="184.0" prefHeight="26.0" prefWidth="307.0" promptText="E-mail" />
+                        <Label layoutX="36.0" layoutY="217.0" prefHeight="28.0" prefWidth="90.0" text="Senha" />
+                        <Label layoutX="36.0" layoutY="278.0" prefHeight="28.0" prefWidth="106.0" text="Confirme a senha" />
+                        <PasswordField fx:id="setSenhaField" layoutX="36.0" layoutY="244.0" prefHeight="26.0" prefWidth="307.0" promptText="Senha" />
+                        <PasswordField fx:id="senhaTextField" layoutX="36.0" layoutY="306.0" prefHeight="26.0" prefWidth="307.0" promptText="Confirme a senha" />
+                        <Button fx:id="cadastroBotao" layoutX="122.0" layoutY="350.0" mnemonicParsing="false" onAction="#onCadastrar" prefHeight="26.0" prefWidth="134.0" style="-fx-background-color: #FFDE21;" text="Cadastrar" textFill="WHITE">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font>
+                        </Button>
+                        <Button fx:id="voltarBotao" layoutX="163.0" layoutY="385.0" mnemonicParsing="false" onAction="#onVoltar" prefHeight="26.0" prefWidth="53.0" style="-fx-background-color: #5A189A;" text="Voltar" textFill="#f7f7f7">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font>
+                        </Button>
+                        <TextField fx:id="nomeCompletoTextField" layoutX="36.0" layoutY="122.0" prefHeight="26.0" prefWidth="307.0" promptText="Nome" />
+                        <Text layoutX="96.0" layoutY="63.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Gym System" textAlignment="CENTER" wrappingWidth="186.93673706054688">
+                           <font>
+                              <Font size="33.0" />
+                           </font>
+                        </Text>
+                     </children>
+                  </Pane>
+                  <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="150.0" layoutY="27.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../images/dumbbells.png" />
+                     </image>
+                  </ImageView>
                </children>
-            </Pane>
+            </AnchorPane>
          </children>
       </AnchorPane>
    </center>
-   <left>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #515151;" BorderPane.alignment="CENTER" />
-   </left>
-   <right>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #515151;" BorderPane.alignment="CENTER" />
-   </right>
-   <bottom>
-      <AnchorPane prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #515151;" BorderPane.alignment="CENTER" />
-   </bottom>
 </BorderPane>
