--- a/src/main/java/br/upe/ui/telas/views/AdministradorView.fxml
+++ b/src/main/java/br/upe/ui/telas/views/AdministradorView.fxml
@@ -43,7 +43,7 @@
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" style="-fx-background-color: #2c2c2c;" VBox.vgrow="ALWAYS">
          <children>
-            <ImageView fx:id="LogoApp" fitHeight="130.0" fitWidth="150.0" layoutX="45.0" layoutY="60.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="LogoDoApp" fitHeight="130.0" fitWidth="150.0" layoutX="45.0" layoutY="60.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../../../../../images%20scenebuilder/LogoApp.png" />
                </image>
