--- a/src/main/resources/fxml/visualizador.fxml
+++ b/src/main/resources/fxml/visualizador.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="450.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.upe.controller.VisualizadorExercicioController">
+<BorderPane prefHeight="450.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.upe.ui.controller.VisualizadorExercicioController">
 
     <center>
         <AnchorPane prefHeight="300.0" prefWidth="400.0" BorderPane.alignment="CENTER">
