--- a/src/main/resources/fxml/ExercicioView.fxml
+++ b/src/main/resources/fxml/ExercicioView.fxml
@@ -49,25 +49,25 @@
                <children>
                   <HBox alignment="TOP_CENTER" prefHeight="250.0" prefWidth="200.0">
                      <children>
-                        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" scaleX="1.1" scaleY="1.1">
+                        <ImageView fitHeight="106.0" fitWidth="104.0" pickOnBounds="true" preserveRatio="true" scaleX="1.1" scaleY="1.1">
                            <image>
-                              <Image url="@../../../../../../images%20scenebuilder/dumbbells%201.png" />
+                              <Image url="@../images/imagesMenu/dumbbells%201.png" />
                            </image>
                            <HBox.margin>
                               <Insets right="120.0" top="50.0" />
                            </HBox.margin>
                         </ImageView>
-                        <ImageView fx:id="IMenu" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" scaleX="1.3" scaleY="1.3">
+                        <ImageView fx:id="IMenu" fitHeight="95.0" fitWidth="105.0" pickOnBounds="true" preserveRatio="true" scaleX="1.3" scaleY="1.3">
                            <image>
-                              <Image url="@../../../../../../images%20scenebuilder/Menu%20usuario.png" />
+                              <Image url="@../images/imagesMenu/Design%20sem%20nome%20(3)%201.png" />
                            </image>
                            <HBox.margin>
                               <Insets right="120.0" top="50.0" />
                            </HBox.margin>
                         </ImageView>
-                        <ImageView fx:id="IFechar" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" scaleX="1.1" scaleY="1.1">
+                        <ImageView fx:id="IFechar" fitHeight="109.0" fitWidth="122.0" pickOnBounds="true" preserveRatio="true" scaleX="1.1" scaleY="1.1">
                            <image>
-                              <Image url="@../../../../../../images%20scenebuilder/Sair%20do%20app.png" />
+                              <Image url="@../images/imagesMenu/Design%20sem%20nome%20(6)%201.png" />
                            </image>
                            <HBox.margin>
                               <Insets top="50.0" />
