--- a/src/main/resources/fxml/IndicadoresView.fxml
+++ b/src/main/resources/fxml/IndicadoresView.fxml
@@ -49,25 +49,25 @@
                <children>
                   <HBox alignment="TOP_CENTER" prefHeight="250.0" prefWidth="200.0">
                      <children>
-                        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" scaleX="1.1" scaleY="1.1">
+                        <ImageView fitHeight="125.0" fitWidth="133.0" pickOnBounds="true" preserveRatio="true" scaleX="1.1" scaleY="1.1">
                            <image>
-                              <Image url="@../../../../../../images%20scenebuilder/dumbbells%201.png" />
+                              <Image url="@../images/imagesMenu/dumbbells%201.png" />
                            </image>
                            <HBox.margin>
                               <Insets right="120.0" top="50.0" />
                            </HBox.margin>
                         </ImageView>
-                        <ImageView fx:id="IFavoritos" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" scaleX="1.3" scaleY="1.3">
+                        <ImageView fx:id="IFavoritos" onMouseClicked="#abrirFavoritos" fitHeight="111.0" fitWidth="124.0" pickOnBounds="true" preserveRatio="true" scaleX="1.3" scaleY="1.3">
                            <image>
-                              <Image url="@../../../../../../images%20scenebuilder/Coracao.png" />
+                              <Image url="@../images/imagesMenu/Design%20sem%20nome%20(2)%201.png" />
                            </image>
                            <HBox.margin>
                               <Insets right="120.0" top="50.0" />
                            </HBox.margin>
                         </ImageView>
-                        <ImageView fx:id="IFechar" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" scaleX="1.1" scaleY="1.1">
+                        <ImageView fx:id="IFechar" onMouseClicked="#voltar" fitHeight="125.0" fitWidth="136.0" pickOnBounds="true" preserveRatio="true" scaleX="1.1" scaleY="1.1">
                            <image>
-                              <Image url="@../../../../../../images%20scenebuilder/Sair%20do%20app.png" />
+                              <Image url="@../images/imagesMenu/Design%20sem%20nome%20(6)%201.png" />
                            </image>
                            <HBox.margin>
                               <Insets top="50.0" />
@@ -75,7 +75,7 @@
                         </ImageView>
                      </children>
                   </HBox>
-                  <Button fx:id="BCadastrarIN" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" scaleX="1.5" scaleY="1.5" style="-fx-background-color: #1E1E1E;" text="Cadastrar novo indicador" textFill="#e5a000">
+                  <Button fx:id="BCadastrarIN" onAction="#abrirCadastrarIndicador" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" scaleX="1.5" scaleY="1.5" style="-fx-background-color: #1E1E1E;" text="Cadastrar novo indicador" textFill="#e5a000">
                      <VBox.margin>
                         <Insets top="100.0" />
                      </VBox.margin>
@@ -83,7 +83,7 @@
                         <Font size="15.0" />
                      </font>
                   </Button>
-                  <Button fx:id="BListarIN" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" scaleX="1.5" scaleY="1.5" style="-fx-background-color: #1E1E1E;" text="Ver meus indicadores" textFill="#e5a000">
+                  <Button fx:id="BListarIN" onAction="#abrirListarIndicadores" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" scaleX="1.5" scaleY="1.5" style="-fx-background-color: #1E1E1E;" text="Ver meus indicadores" textFill="#e5a000">
                      <VBox.margin>
                         <Insets top="50.0" />
                      </VBox.margin>
