--- a/src/main/resources/fxml/TreinoView.fxml
+++ b/src/main/resources/fxml/TreinoView.fxml
@@ -1,37 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!--
-  Copyright (c) 2015, 2019, Gluon and/or its affiliates.
-  All rights reserved. Use is subject to license terms.
-
-  This file is available and licensed under the following license:
-
-  Redistribution and use in source and binary forms, with or without
-  modification, are permitted provided that the following conditions
-  are met:
-
-  - Redistributions of source code must retain the above copyright
-    notice, this list of conditions and the following disclaimer.
-  - Redistributions in binary form must reproduce the above copyright
-    notice, this list of conditions and the following disclaimer in
-    the documentation and/or other materials provided with the distribution.
-  - Neither the name of Oracle Corporation nor the names of its
-    contributors may be used to endorse or promote products derived
-    from this software without specific prior written permission.
-
-  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
-  "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
-  LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
-  A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
-  OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
-  SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
-  LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
-  DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
-  THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
-  (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
-  OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
--->
-
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
@@ -41,15 +9,28 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.upe.ui.controller.IndicadoresViewController">
-  <children>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" style="-fx-background-color: #2C2C2C;">
-      <children>
-            <VBox alignment="TOP_CENTER" prefHeight="700.0" prefWidth="900.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+<VBox prefHeight="700.0" prefWidth="900.0"
+      xmlns="http://javafx.com/javafx/25"
+      xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="br.upe.ui.controller.TreinoViewController">
+
+   <children>
+      <AnchorPane maxHeight="-1.0" maxWidth="-1.0"
+                  prefHeight="-1.0" prefWidth="-1.0"
+                  style="-fx-background-color: #2C2C2C;">
+         <children>
+            <VBox alignment="TOP_CENTER"
+                  prefHeight="700.0" prefWidth="900.0"
+                  AnchorPane.bottomAnchor="0.0"
+                  AnchorPane.leftAnchor="0.0"
+                  AnchorPane.rightAnchor="0.0"
+                  AnchorPane.topAnchor="0.0">
+
                <children>
                   <HBox alignment="TOP_CENTER" prefHeight="250.0" prefWidth="200.0">
                      <children>
-                        <ImageView fitHeight="99.0" fitWidth="104.0" pickOnBounds="true" preserveRatio="true" scaleX="1.1" scaleY="1.1">
+                        <ImageView fitHeight="99.0" fitWidth="104.0" pickOnBounds="true"
+                                   preserveRatio="true" scaleX="1.1" scaleY="1.1">
                            <image>
                               <Image url="@../images/dumbbells.png" />
                            </image>
@@ -57,7 +38,9 @@
                               <Insets right="120.0" top="50.0" />
                            </HBox.margin>
                         </ImageView>
-                        <ImageView fx:id="ITreino" fitHeight="95.0" fitWidth="104.0" pickOnBounds="true" preserveRatio="true" scaleX="1.3" scaleY="1.3">
+
+                        <ImageView fx:id="ITreino" fitHeight="95.0" fitWidth="104.0"
+                                   pickOnBounds="true" preserveRatio="true" scaleX="1.3" scaleY="1.3">
                            <image>
                               <Image url="@../images/imagesMenu/Design%20sem%20nome%20(4)%201.png" />
                            </image>
@@ -65,7 +48,10 @@
                               <Insets right="120.0" top="50.0" />
                            </HBox.margin>
                         </ImageView>
-                        <ImageView fx:id="IFechar" fitHeight="100.0" fitWidth="104.0" pickOnBounds="true" preserveRatio="true" scaleX="1.1" scaleY="1.1">
+
+                        <ImageView fx:id="IFechar" fitHeight="100.0" fitWidth="104.0"
+                                   pickOnBounds="true" preserveRatio="true" scaleX="1.1" scaleY="1.1"
+                                   onMouseClicked="#fecharTela">
                            <image>
                               <Image url="@../images/imagesMenu/Design%20sem%20nome%20(6)%201.png" />
                            </image>
@@ -75,7 +61,16 @@
                         </ImageView>
                      </children>
                   </HBox>
-                  <Button fx:id="BListarTR" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" scaleX="1.5" scaleY="1.5" style="-fx-background-color: #1E1E1E;" text="Listar meus planos de treino" textFill="#e5a000">
+
+                  <Button fx:id="BListarTR"
+                          alignment="CENTER"
+                          contentDisplay="CENTER"
+                          mnemonicParsing="false"
+                          scaleX="1.5" scaleY="1.5"
+                          style="-fx-background-color: #1E1E1E;"
+                          text="Listar meus planos de treino"
+                          textFill="#e5a000"
+                          onAction="#listarPlanosDeTreino">
                      <VBox.margin>
                         <Insets top="50.0" />
                      </VBox.margin>
@@ -83,7 +78,16 @@
                         <Font size="15.0" />
                      </font>
                   </Button>
-                  <Button fx:id="BEditarTR" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" scaleX="1.5" scaleY="1.5" style="-fx-background-color: #1E1E1E;" text="Editar plano de treino" textFill="#e5a000">
+
+                  <Button fx:id="BEditarTR"
+                          alignment="CENTER"
+                          contentDisplay="CENTER"
+                          mnemonicParsing="false"
+                          scaleX="1.5" scaleY="1.5"
+                          style="-fx-background-color: #1E1E1E;"
+                          text="Editar plano de treino"
+                          textFill="#e5a000"
+                          onAction="#editarPlanoDeTreino">
                      <VBox.margin>
                         <Insets top="35.0" />
                      </VBox.margin>
@@ -91,41 +95,77 @@
                         <Font size="15.0" />
                      </font>
                   </Button>
-                  <Button fx:id="BDeletarTR" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" scaleX="1.5" scaleY="1.5" scaleZ="0.0" style="-fx-background-color: #1E1E1E;" text="Deletar plano de treino" textFill="#e5a000">
-                     <font>
-                        <Font size="15.0" />
-                     </font>
+
+                  <Button fx:id="BDeletarTR"
+                          alignment="CENTER"
+                          contentDisplay="CENTER"
+                          mnemonicParsing="false"
+                          scaleX="1.5" scaleY="1.5"
+                          style="-fx-background-color: #1E1E1E;"
+                          text="Deletar plano de treino"
+                          textFill="#e5a000"
+                          onAction="#deletarPlanoDeTreino">
                      <VBox.margin>
                         <Insets top="35.0" />
                      </VBox.margin>
+                     <font>
+                        <Font size="15.0" />
+                     </font>
                   </Button>
-                  <Button fx:id="BAdicionarTR" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" scaleX="1.5" scaleY="1.5" style="-fx-background-color: #1E1E1E;" text="Adicionar plano de treino" textFill="#e5a000">
-                     <font>
-                        <Font size="15.0" />
-                     </font>
+
+                  <Button fx:id="BAdicionarTR"
+                          alignment="CENTER"
+                          contentDisplay="CENTER"
+                          mnemonicParsing="false"
+                          scaleX="1.5" scaleY="1.5"
+                          style="-fx-background-color: #1E1E1E;"
+                          text="Adicionar plano de treino"
+                          textFill="#e5a000"
+                          onAction="#adicionarPlanoDeTreino">
                      <VBox.margin>
                         <Insets top="35.0" />
                      </VBox.margin>
+                     <font>
+                        <Font size="15.0" />
+                     </font>
                   </Button>
-                  <Button fx:id="BRemoverTR" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" scaleX="1.5" scaleY="1.5" style="-fx-background-color: #1E1E1E;" text="Remover plano de treino" textFill="#e5a000">
-                     <font>
-                        <Font size="15.0" />
-                     </font>
+
+                  <Button fx:id="BRemoverTR"
+                          alignment="CENTER"
+                          contentDisplay="CENTER"
+                          mnemonicParsing="false"
+                          scaleX="1.5" scaleY="1.5"
+                          style="-fx-background-color: #1E1E1E;"
+                          text="Remover plano de treino"
+                          textFill="#e5a000"
+                          onAction="#removerPlanoDeTreino">
                      <VBox.margin>
                         <Insets top="35.0" />
                      </VBox.margin>
+                     <font>
+                        <Font size="15.0" />
+                     </font>
                   </Button>
-                  <Button fx:id="BDetalhesTR" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" scaleX="1.5" scaleY="1.5" style="-fx-background-color: #1E1E1E;" text="Ver detalhes" textFill="#e5a000">
-                     <font>
-                        <Font size="15.0" />
-                     </font>
+
+                  <Button fx:id="BDetalhesTR"
+                          alignment="CENTER"
+                          contentDisplay="CENTER"
+                          mnemonicParsing="false"
+                          scaleX="1.5" scaleY="1.5"
+                          style="-fx-background-color: #1E1E1E;"
+                          text="Ver detalhes"
+                          textFill="#e5a000"
+                          onAction="#verDetalhesTreino">
                      <VBox.margin>
                         <Insets top="35.0" />
                      </VBox.margin>
+                     <font>
+                        <Font size="15.0" />
+                     </font>
                   </Button>
                </children>
             </VBox>
-      </children>
-    </AnchorPane>
-  </children>
+         </children>
+      </AnchorPane>
+   </children>
 </VBox>
