--- a/src/main/resources/fxml/ExercicioView.fxml
+++ b/src/main/resources/fxml/ExercicioView.fxml
@@ -41,41 +41,44 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.upe.ui.controller.AdministradorViewController">
+<VBox minHeight="700.0" minWidth="900.0" prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.upe.ui.controller.AdministradorViewController">
   <children>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" style="-fx-background-color: #2C2C2C;" VBox.vgrow="ALWAYS">
+    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" minHeight="700.0" minWidth="900.0" prefHeight="700.0" prefWidth="900.0" style="-fx-background-color: #2C2C2C;" VBox.vgrow="ALWAYS">
       <children>
             <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
-                  <HBox alignment="TOP_CENTER" prefHeight="250.0" prefWidth="200.0">
+                  <HBox alignment="CENTER" prefHeight="161.0" prefWidth="900.0">
                      <children>
-                        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" scaleX="1.1" scaleY="1.1">
+                        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../../../../../../images%20scenebuilder/dumbbells%201.png" />
+                              <Image url="@../images/dumbbells%201.png" />
                            </image>
                            <HBox.margin>
-                              <Insets right="120.0" top="50.0" />
+                              <Insets left="35.0" right="150.0" />
                            </HBox.margin>
                         </ImageView>
-                        <ImageView fx:id="IMenu" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" scaleX="1.3" scaleY="1.3">
+                        <ImageView fx:id="IMenu" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../../../../../../images%20scenebuilder/Menu%20usuario.png" />
+                              <Image url="@../images/imagesMenu/Design%20sem%20nome%20(3)%201.png" />
                            </image>
                            <HBox.margin>
-                              <Insets right="120.0" top="50.0" />
+                              <Insets left="50.0" right="150.0" />
                            </HBox.margin>
                         </ImageView>
-                        <ImageView fx:id="IFechar" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" scaleX="1.1" scaleY="1.1">
+                        <ImageView fx:id="IFechar" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../../../../../../images%20scenebuilder/Sair%20do%20app.png" />
+                              <Image url="@../images/imagesMenu/Design%20sem%20nome%20(6)%201.png" />
                            </image>
                            <HBox.margin>
-                              <Insets top="50.0" />
+                              <Insets left="50.0" right="20.0" />
                            </HBox.margin>
                         </ImageView>
                      </children>
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin>
                   </HBox>
-                  <Button fx:id="BCadastrarEX" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" scaleX="1.5" scaleY="1.5" style="-fx-background-color: #1E1E1E;" text="Cadastrar novo exercício" textFill="#e5a000">
+                  <Button fx:id="BCadastrarEX" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="40.0" prefWidth="500.0" style="-fx-background-color: #1E1E1E;" text="Cadastrar novo exercício" textFill="#e5a000">
                      <VBox.margin>
                         <Insets top="75.0" />
                      </VBox.margin>
@@ -83,36 +86,36 @@
                         <Font size="15.0" />
                      </font>
                   </Button>
-                  <Button fx:id="BListarEX" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" scaleX="1.5" scaleY="1.5" style="-fx-background-color: #1E1E1E;" text="Listar meus exercícios" textFill="#e5a000">
+                  <Button fx:id="BListarEX" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="40.0" prefWidth="500.0" style="-fx-background-color: #1E1E1E;" text="Listar meus exercícios" textFill="#e5a000">
                      <VBox.margin>
-                        <Insets top="40.0" />
+                        <Insets top="20.0" />
                      </VBox.margin>
                      <font>
                         <Font size="15.0" />
                      </font>
                   </Button>
-                  <Button fx:id="BEditarEX" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" scaleX="1.5" scaleY="1.5" style="-fx-background-color: #1E1E1E;" text="Editar exercício" textFill="#e5a000">
+                  <Button fx:id="BEditarEX" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="40.0" prefWidth="500.0" style="-fx-background-color: #1E1E1E;" text="Editar exercício" textFill="#e5a000">
                      <font>
                         <Font size="15.0" />
                      </font>
                      <VBox.margin>
-                        <Insets top="40.0" />
+                        <Insets top="20.0" />
                      </VBox.margin>
                   </Button>
-                  <Button fx:id="BExcluirEX" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" scaleX="1.5" scaleY="1.5" style="-fx-background-color: #1E1E1E;" text="Excluir exercício" textFill="#e5a000">
+                  <Button fx:id="BExcluirEX" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="40.0" prefWidth="500.0" style="-fx-background-color: #1E1E1E;" text="Excluir exercício" textFill="#e5a000">
                      <font>
                         <Font size="15.0" />
                      </font>
                      <VBox.margin>
-                        <Insets top="40.0" />
+                        <Insets top="20.0" />
                      </VBox.margin>
                   </Button>
-                  <Button fx:id="BDetalhesEX" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" scaleX="1.5" scaleY="1.5" style="-fx-background-color: #1E1E1E;" text="Ver detalhes de exercício" textFill="#e5a000">
+                  <Button fx:id="BDetalhesEX" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="40.0" prefWidth="500.0" style="-fx-background-color: #1E1E1E;" text="Ver detalhes de exercício" textFill="#e5a000">
                      <font>
                         <Font size="15.0" />
                      </font>
                      <VBox.margin>
-                        <Insets top="40.0" />
+                        <Insets top="20.0" />
                      </VBox.margin>
                   </Button>
                </children>
