--- a/src/main/resources/fxml/IndicadoresView.fxml
+++ b/src/main/resources/fxml/IndicadoresView.fxml
@@ -47,35 +47,37 @@
       <children>
             <VBox alignment="TOP_CENTER" prefHeight="700.0" prefWidth="900.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
-                  <HBox alignment="TOP_CENTER" prefHeight="250.0" prefWidth="200.0">
+                  <HBox alignment="CENTER" prefHeight="186.0" prefWidth="900.0">
                      <children>
-                        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" scaleX="1.1" scaleY="1.1">
+                        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../../../../../../images%20scenebuilder/dumbbells%201.png" />
+                              <Image url="@../images/dumbbells%201.png" />
                            </image>
                            <HBox.margin>
-                              <Insets right="120.0" top="50.0" />
+                              <Insets left="10.0" right="200.0" />
                            </HBox.margin>
                         </ImageView>
-                        <ImageView fx:id="IFavoritos" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" scaleX="1.3" scaleY="1.3">
+                        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../../../../../../images%20scenebuilder/Coracao.png" />
+                              <Image url="@../images/imagesMenu/Design%20sem%20nome%20(2)%201.png" />
                            </image>
                            <HBox.margin>
-                              <Insets right="120.0" top="50.0" />
+                              <Insets right="200.0" />
                            </HBox.margin>
                         </ImageView>
-                        <ImageView fx:id="IFechar" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" scaleX="1.1" scaleY="1.1">
-                           <image>
-                              <Image url="@../../../../../../images%20scenebuilder/Sair%20do%20app.png" />
-                           </image>
-                           <HBox.margin>
-                              <Insets top="50.0" />
-                           </HBox.margin>
-                        </ImageView>
+                        <AnchorPane prefHeight="138.0" prefWidth="150.0">
+                           <children>
+                              <ImageView fitHeight="150.0" fitWidth="165.0" layoutY="18.0" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="18.0">
+                                 <image>
+                                    <Image url="@../images/Design%20sem%20nome%20(6)%201.png" />
+                                 </image>
+                              </ImageView>
+                              <Button fx:id="sairB" layoutX="3.0" layoutY="22.0" mnemonicParsing="false" onAction="#handleSair" prefHeight="142.0" prefWidth="143.0" style="-fx-background-color: transparent;" text="" />
+                           </children>
+                        </AnchorPane>
                      </children>
                   </HBox>
-                  <Button fx:id="BCadastrarIN" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" scaleX="1.5" scaleY="1.5" style="-fx-background-color: #1E1E1E;" text="Cadastrar novo indicador" textFill="#e5a000">
+                  <Button fx:id="BCadastrarIN" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="60.0" prefWidth="500.0" style="-fx-background-color: #1E1E1E;" text="Cadastrar novo indicador" textFill="#e5a000">
                      <VBox.margin>
                         <Insets top="100.0" />
                      </VBox.margin>
@@ -83,7 +85,7 @@
                         <Font size="15.0" />
                      </font>
                   </Button>
-                  <Button fx:id="BListarIN" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" scaleX="1.5" scaleY="1.5" style="-fx-background-color: #1E1E1E;" text="Ver meus indicadores" textFill="#e5a000">
+                  <Button fx:id="BListarIN" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="60.0" prefWidth="500.0" style="-fx-background-color: #1E1E1E;" text="Ver meus indicadores" textFill="#e5a000">
                      <VBox.margin>
                         <Insets top="50.0" />
                      </VBox.margin>
