--- a/src/main/resources/fxml/AdministradorView.fxml
+++ b/src/main/resources/fxml/AdministradorView.fxml
@@ -48,36 +48,36 @@
                         <Insets bottom="80.0" />
                      </VBox.margin>
                   </HBox>
-                  <Button fx:id="BListarUsuarios" mnemonicParsing="false" prefHeight="50.0" prefWidth="500.0" style="-fx-background-color: #1e1e1e;" text="Listar Usuários" textFill="#e5a000" onAction="#handleListarUsuarios">
+                  <Button fx:id="BListarUsuarios" mnemonicParsing="false" onAction="#handleListarUsuarios" prefHeight="50.0" prefWidth="500.0" style="-fx-background-color: #1e1e1e;" text="Listar Usuários" textFill="#e5a000">
                      <font>
-                        <Font size="20.0" />
+                        <Font size="15.0" />
                      </font>
                      <VBox.margin>
                         <Insets bottom="20.0" top="20.0" />
                      </VBox.margin>
                   </Button>
-                  <Button fx:id="BPromoverUsuario" mnemonicParsing="false" prefHeight="50.0" prefWidth="500.0" style="-fx-background-color: #1e1e1e;" text="Promover Usuário a Admin" textFill="#e5a000" onAction="#handlePromoverUsuario">
+                  <Button fx:id="BPromoverUsuario" mnemonicParsing="false" onAction="#handlePromoverUsuario" prefHeight="50.0" prefWidth="500.0" style="-fx-background-color: #1e1e1e;" text="Promover Usuário a Admin" textFill="#e5a000">
                      <VBox.margin>
                         <Insets bottom="20.0" />
                      </VBox.margin>
                      <font>
-                        <Font size="20.0" />
+                        <Font size="15.0" />
                      </font>
                   </Button>
-                  <Button fx:id="BRebaixarUsuario" mnemonicParsing="false" prefHeight="50.0" prefWidth="500.0" style="-fx-background-color: #1e1e1e;" text="Rebaixar Usuário a Comum" textFill="#e5a000" onAction="#handleRebaixarUsuario">
+                  <Button fx:id="BRebaixarUsuario" mnemonicParsing="false" onAction="#handleRebaixarUsuario" prefHeight="50.0" prefWidth="500.0" style="-fx-background-color: #1e1e1e;" text="Rebaixar Usuário a Comum" textFill="#e5a000">
                      <VBox.margin>
                         <Insets bottom="20.0" />
                      </VBox.margin>
                      <font>
-                        <Font size="20.0" />
+                        <Font size="15.0" />
                      </font>
                   </Button>
-                  <Button fx:id="BRemoverUsuario" mnemonicParsing="false" prefHeight="50.0" prefWidth="500.0" style="-fx-background-color: #1e1e1e;" text="Remover Usuário" textFill="#e5a000" onAction="#handleRemoverUsuario">
+                  <Button fx:id="BRemoverUsuario" mnemonicParsing="false" onAction="#handleRemoverUsuario" prefHeight="50.0" prefWidth="500.0" style="-fx-background-color: #1e1e1e;" text="Remover Usuário" textFill="#e5a000">
                      <VBox.margin>
                         <Insets bottom="120.0" />
                      </VBox.margin>
                      <font>
-                        <Font size="20.0" />
+                        <Font size="15.0" />
                      </font>
                   </Button>
                </children>
