--- a/src/main/resources/fxml/MenuUsuarioLogado.fxml
+++ b/src/main/resources/fxml/MenuUsuarioLogado.fxml
@@ -2,119 +2,156 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" style="-fx-background-color: #2C2C2C;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.upe.ui.controller.MenuUsuarioLogadoController">
     <children>
-        <VBox prefHeight="700.0" prefWidth="900.0">
-            <children>
-                <HBox prefHeight="711.0" prefWidth="900.0">
-                    <children>
-                        <ImageView fitHeight="150.0" fitWidth="128.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@/images/imagesMenu/dumbbells 1.png" />
-                            </image>
-                            <HBox.margin>
-                                <Insets left="35.0" top="10.0" />
-                            </HBox.margin>
+      <StackPane prefHeight="700.0" prefWidth="900.0" />
+        <VBox alignment="CENTER" prefHeight="700.0" prefWidth="900.0">
+         <children>
+            <HBox alignment="CENTER" prefHeight="186.0" prefWidth="900.0">
+               <children>
+                  <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/dumbbells%201.png" />
+                     </image>
+                     <HBox.margin>
+                        <Insets left="10.0" right="200.0" />
+                     </HBox.margin>
+                  </ImageView>
+                  <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/Design%20sem%20nome%20(4)%202.png" />
+                     </image>
+                     <HBox.margin>
+                        <Insets right="200.0" />
+                     </HBox.margin>
+                  </ImageView>
+                  <AnchorPane prefHeight="138.0" prefWidth="150.0">
+                     <children>
+                        <ImageView fitHeight="150.0" fitWidth="165.0" layoutY="18.0" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="18.0">
+                           <image>
+                              <Image url="@../images/Design%20sem%20nome%20(6)%201.png" />
+                           </image>
                         </ImageView>
-                        <ImageView fitHeight="104.0" fitWidth="105.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@/images/imagesMenu/Design sem nome (6) 1.png" />
-                            </image>
-                            <HBox.margin>
-                                <Insets left="600.0" top="20.0" />
-                            </HBox.margin>
-                        </ImageView>
-                        <ButtonBar prefHeight="40.0" prefWidth="200.0" />
-                    </children>
-                    <VBox.margin>
+                        <Button fx:id="sairB" layoutX="3.0" layoutY="22.0" mnemonicParsing="false" onAction="#handleSair" prefHeight="142.0" prefWidth="143.0" style="-fx-background-color: transparent;" text="" />
+                     </children>
+                  </AnchorPane>
+               </children>
+               <VBox.margin>
+                  <Insets bottom="80.0" />
+               </VBox.margin>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="40.0" prefWidth="900.0">
+               <children>
+                  <ImageView fitHeight="44.0" fitWidth="46.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/imagesMenu/Design%20sem%20nome%20(1)%201.png" />
+                     </image>
+                  </ImageView>
+                  <Button fx:id="meusTreinosB" mnemonicParsing="false" prefHeight="40.0" prefWidth="500.0" style="-fx-background-color: #1E1E1E;" text="Meus Treinos" textFill="#e5a000">
+                     <opaqueInsets>
                         <Insets />
-                    </VBox.margin>
-                </HBox>
-            </children>
+                     </opaqueInsets>
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Button>
+               </children>
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="40.0" prefWidth="900.0">
+               <children>
+                  <ImageView fitHeight="44.0" fitWidth="46.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/imagesMenu/Design%20sem%20nome%20(2)%201.png" />
+                     </image>
+                  </ImageView>
+                  <Button fx:id="meusIndicadoresB" mnemonicParsing="false" prefHeight="40.0" prefWidth="500.0" style="-fx-background-color: #1E1E1E;" text="Meus Indicadores" textFill="#e5a000">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Button>
+               </children>
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="40.0" prefWidth="200.0">
+               <children>
+                  <ImageView fitHeight="44.0" fitWidth="46.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/imagesMenu/Design%20sem%20nome%20(4)%201.png" />
+                     </image>
+                  </ImageView>
+                  <Button fx:id="gerenciarPlanosB" mnemonicParsing="false" prefHeight="40.0" prefWidth="500.0" style="-fx-background-color: #1E1E1E;" text="Gerenciar Planos De Treinos" textFill="#e5a000">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Button>
+               </children>
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="40.0" prefWidth="200.0">
+               <children>
+                  <ImageView fitHeight="44.0" fitWidth="46.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/imagesMenu/Design%20sem%20nome%20(3)%201.png" />
+                     </image>
+                  </ImageView>
+                  <Button fx:id="gerenciarExerciciosB" mnemonicParsing="false" prefHeight="40.0" prefWidth="500.0" style="-fx-background-color: #1E1E1E;" text="Gerenciar Exercícios" textFill="#e5a000">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Button>
+               </children>
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="40.0" prefWidth="200.0">
+               <children>
+                  <ImageView fitHeight="44.0" fitWidth="46.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/imagesMenu/Design%20sem%20nome%20(5)%201.png" />
+                     </image>
+                  </ImageView>
+                  <Button fx:id="exportarRelatoriosB" mnemonicParsing="false" prefHeight="40.0" prefWidth="500.0" style="-fx-background-color: #1E1E1E;" text="Exportar Relatórios" textFill="#e5a000">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Button>
+               </children>
+               <VBox.margin>
+                  <Insets bottom="150.0" />
+               </VBox.margin>
+            </HBox>
+         </children>
         </VBox>
-        <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="215.0" layoutY="200.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-                <Image url="@/images/imagesMenu/Design sem nome (1) 1.png" />
-            </image>
-        </ImageView>
-        <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="215.0" layoutY="250.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-                <Image url="@/images/imagesMenu/Design sem nome (2) 1.png" />
-            </image>
-        </ImageView>
-        <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="215.0" layoutY="300.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-                <Image url="@/images/imagesMenu/Design sem nome (4) 1.png" />
-            </image>
-        </ImageView>
-        <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="215.0" layoutY="350.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-                <Image url="@/images/imagesMenu/Design sem nome (3) 1.png" />
-            </image>
-        </ImageView>
-        <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="215.0" layoutY="400.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-                <Image url="@/images/imagesMenu/Design sem nome (5) 1.png" />
-            </image>
-        </ImageView>
-        <ButtonBar layoutX="250.0" layoutY="200.0" prefHeight="40.0" prefWidth="398.0">
-            <buttons>
-                <Button fx:id="btnMeusTreinos" layoutX="180.0" layoutY="200.0" mnemonicParsing="false" onMouseClicked="#abrirMeusTreinos" prefHeight="40.0" prefWidth="409.0" style="-fx-background-color: #1E1E1E;" text="Meus Treinos" textFill="#e5a000">
-                    <font>
-                        <Font name="Arial Bold" size="14.0" />
-                    </font>
-                </Button>
-            </buttons>
-        </ButtonBar>
-        <ButtonBar layoutX="250.0" layoutY="250.0" prefHeight="40.0" prefWidth="398.0">
-            <buttons>
-                <Button fx:id="btnMeusIndicadores" layoutX="220.0" layoutY="200.0" mnemonicParsing="false" onMouseClicked="#abrirMeusIndicadores" prefHeight="40.0" prefWidth="409.0" style="-fx-background-color: #1E1E1E;" text="Meus Indicadores" textFill="#e5a000">
-                    <font>
-                        <Font name="Arial Bold" size="14.0" />
-                    </font>
-                </Button>
-            </buttons>
-        </ButtonBar>
-        <ButtonBar layoutX="250.0" layoutY="300.0" prefHeight="40.0" prefWidth="398.0">
-            <buttons>
-                <Button fx:id="btnGerenciarPlanoDeTreino" layoutX="150.0" layoutY="200.0" mnemonicParsing="false" onMouseClicked="#abrirGerenciarPlanoDeTreino" prefHeight="40.0" prefWidth="409.0" style="-fx-background-color: #1E1E1E;" text="Gerenciar Plano de Treino" textFill="#e5a000">
-                    <font>
-                        <Font name="Arial Bold" size="14.0" />
-                    </font>
-                </Button>
-            </buttons>
-        </ButtonBar>
-        <ButtonBar layoutX="250.0" layoutY="350.0" prefHeight="40.0" prefWidth="398.0">
-            <buttons>
-                <Button fx:id="btnGerenciarExercicios" layoutX="150.0" layoutY="200.0" mnemonicParsing="false" onMouseClicked="#abrirGerenciarExercicios" prefHeight="40.0" prefWidth="409.0" style="-fx-background-color: #1E1E1E;" text="Gerenciar Exercícios" textFill="#e5a000">
-                    <font>
-                        <Font name="Arial Bold" size="14.0" />
-                    </font>
-                </Button>
-            </buttons>
-        </ButtonBar>
-        <ButtonBar layoutX="250.0" layoutY="400.0" prefHeight="40.0" prefWidth="398.0">
-            <buttons>
-                <Button fx:id="btnExportarRelatorios" layoutX="150.0" layoutY="200.0" mnemonicParsing="false" onMouseClicked="#abrirExportarRelatorios" prefHeight="40.0" prefWidth="409.0" style="-fx-background-color: #1E1E1E;" text="Exportar Relatórios" textFill="#e5a000">
-                    <font>
-                        <Font name="Arial Bold" size="14.0" />
-                    </font>
-                </Button>
-            </buttons>
-        </ButtonBar>
-        <ButtonBar buttonMinWidth="30.0" layoutX="790.0" layoutY="50.0" opacity="0.0" prefHeight="40.0" prefWidth="23.0">
-            <buttons>
-                <Button fx:id="btnSair" layoutX="250.0" minWidth="0.0" mnemonicParsing="false" onMouseClicked="#sairDaConta" prefHeight="26.0" prefWidth="30.0" text="Sair" />
-            </buttons>
-        </ButtonBar>
     </children>
 </AnchorPane>
