--- a/src/main/resources/fxml/MenuPrincipal.fxml
+++ b/src/main/resources/fxml/MenuPrincipal.fxml
@@ -1,96 +1,84 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.upe.ui.controller.MenuPrincipalController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" style="-fx-background-color: #2c2c2c;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.upe.controller.MenuPrincipalController">
    <children>
-      <ImageView fitHeight="736.0" fitWidth="1052.0" layoutX="-109.0" layoutY="-1.0" pickOnBounds="true" preserveRatio="true">
+      <Button fx:id="loginB" alignment="CENTER" layoutX="658.0" layoutY="50.0" mnemonicParsing="false" onAction="#handleLogin" prefHeight="27.0" prefWidth="71.0" style="-fx-border-color: #9c27b0; -fx-background-color: #9c27b0; -fx-border-radius: 6px; -fx-background-radius: 6px;" text="Entrar" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Button>
+      <Button fx:id="registerB" alignment="CENTER" layoutX="747.0" layoutY="50.0" mnemonicParsing="false" onAction="#handleRegister" prefHeight="27.0" prefWidth="104.0" style="-fx-background-color: #e5a000; -fx-border-radius: 6px; -fx-background-radius: 6px;" text="Cadastre-se" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Button>
+      <Button fx:id="exitB" alignment="CENTER" layoutX="415.0" layoutY="624.0" mnemonicParsing="false" onAction="#handleExit" prefHeight="27.0" prefWidth="71.0" style="-fx-border-radius: 6px; -fx-background-radius: 6px; -fx-background-color: #978e8e;" text="Sair" textFill="#515151">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Button>
+      <ImageView fitHeight="80.0" fitWidth="100.0" layoutX="32.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true">
+         <viewport>
+            <Rectangle2D />
+         </viewport>
          <image>
-            <Image url="@../images/behang-met-dumbells-en-gewichten_7%20-%20Editado%202.png" />
+            <Image url="@../images/logo_app.png" />
          </image>
       </ImageView>
-      <StackPane layoutY="161.0" prefHeight="666.0" prefWidth="1448.0" AnchorPane.bottomAnchor="120.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="120.0">
-         <children>
-            <AnchorPane prefHeight="489.0" prefWidth="678.0" style="-fx-background-color: #312F2F;">
-               <children>
-                  <VBox alignment="CENTER" cacheShape="false" layoutX="8.0" prefHeight="460.0" prefWidth="1482.0" spacing="50.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="-8.0" AnchorPane.topAnchor="0.0">
-                     <children>
-                        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
-                           <viewport>
-                              <Rectangle2D />
-                           </viewport>
-                           <image>
-                              <Image url="@../images/dumbbells%201.png" />
-                           </image>
-                        </ImageView>
-                        <HBox alignment="CENTER" prefHeight="116.0" prefWidth="787.0">
-                           <children>
-                              <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0">
-                                 <children>
-                                    <StackPane prefHeight="150.0" prefWidth="200.0" style="-fx-background-color: #E5A000;">
-                                       <children>
-                                          <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
-                                             <image>
-                                                <Image url="@../images/User.png" />
-                                             </image>
-                                          </ImageView>
-                                       </children>
-                                    </StackPane>
-                                    <Button fx:id="loginB" alignment="CENTER" mnemonicParsing="false" onAction="#handleLogin" prefHeight="27.0" prefWidth="152.0" style="-fx-border-color: #9c27b0; -fx-background-color: #312F2F; -fx-border-radius: 6px; -fx-background-radius: 6px;" text="Entrar" textFill="#e5a000" />
-                                 </children>
-                                 <padding>
-                                    <Insets right="50.0" />
-                                 </padding>
-                              </VBox>
-                              <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0">
-                                 <children>
-                                    <StackPane prefHeight="150.0" prefWidth="200.0" style="-fx-background-color: #E5A000;">
-                                       <children>
-                                          <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
-                                             <image>
-                                                <Image url="@../images/Book%20open.png" />
-                                             </image>
-                                          </ImageView>
-                                       </children>
-                                    </StackPane>
-                                    <Button fx:id="registerB" alignment="CENTER" mnemonicParsing="false" onAction="#handleRegister" prefHeight="27.0" prefWidth="154.0" style="-fx-border-color: #9c27b0; -fx-background-color: #312F2F; -fx-border-radius: 6px; -fx-background-radius: 6px;" text="Cadastrar" textFill="#e5a000" />
-                                 </children>
-                                 <padding>
-                                    <Insets right="50.0" />
-                                 </padding>
-                              </VBox>
-                              <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0">
-                                 <children>
-                                    <StackPane prefHeight="150.0" prefWidth="200.0" style="-fx-background-color: #E5A000;">
-                                       <children>
-                                          <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
-                                             <image>
-                                                <Image url="@../images/Arrow%20right-circle.png" />
-                                             </image>
-                                          </ImageView>
-                                       </children>
-                                    </StackPane>
-                                    <Button fx:id="exitB" alignment="CENTER" mnemonicParsing="false" onAction="#handleExit" prefHeight="27.0" prefWidth="153.0" style="-fx-border-color: #9c27b0; -fx-background-color: #312F2F; -fx-border-radius: 6px; -fx-background-radius: 6px;" text="Sair" textFill="#e5a000" />
-                                 </children>
-                              </VBox>
-                           </children>
-                        </HBox>
-                     </children>
-                  </VBox>
-               </children>
-            </AnchorPane>
-         </children>
-      </StackPane>
+      <Text fill="#e5a000" layoutX="138.0" layoutY="72.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Gym System" wrappingWidth="168.0">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Text>
+      <Separator layoutY="103.0" prefHeight="0.0" prefWidth="900.0" />
+      <Text fill="#9c27b0" layoutX="163.0" layoutY="193.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Transforme o seu corpo" wrappingWidth="574.13671875">
+         <font>
+            <Font name="System Bold" size="50.0" />
+         </font>
+      </Text>
+      <Text fill="#978e8e" layoutX="66.0" layoutY="241.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Gerencie os seus treinos, acompanhe seu progresso e alcance seus objetivos com o sistema mais completo de gestão fitness." wrappingWidth="768.13671875">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Text>
+      <ImageView fitHeight="80.0" fitWidth="100.0" layoutX="697.0" layoutY="350.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/muque.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="80.0" fitWidth="100.0" layoutX="410.0" layoutY="350.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/logo_registro.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="80.0" fitWidth="100.0" layoutX="112.0" layoutY="350.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/halter_pequeno.png" />
+         </image>
+      </ImageView>
+      <Text fill="#978e8e" layoutX="55.0" layoutY="448.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Treinos personalizados" wrappingWidth="194.0">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </Text>
+      <Text fill="#978e8e" layoutX="369.0" layoutY="448.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Gestão de usuários" wrappingWidth="162.0">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </Text>
+      <Text fill="#978e8e" layoutX="606.0" layoutY="448.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Acompanhe indicadores pessoais" wrappingWidth="282.0">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </Text>
    </children>
-   <opaqueInsets>
-      <Insets bottom="80.0" top="80.0" />
-   </opaqueInsets>
 </AnchorPane>
