--- a/src/main/resources/fxml/AdministradorView.fxml
+++ b/src/main/resources/fxml/AdministradorView.fxml
@@ -10,11 +10,9 @@
 <?import javafx.scene.text.Text?>
 
 <VBox prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.upe.controller.AdministradorViewController">
-   <children>
-      <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" style="-fx-background-color: #2c2c2c;" VBox.vgrow="ALWAYS">
-         <children>
+
+      <AnchorPane style="-fx-background-color: #2c2c2c;" VBox.vgrow="ALWAYS">
             <AnchorPane prefHeight="701.0" prefWidth="317.0">
-               <children>
                   <Button fx:id="BListarUsuarios" layoutX="67.0" layoutY="189.0" mnemonicParsing="false" onAction="#handleListarUsuarios" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1e1e1e;" text="Listar Usuários" textFill="#e5a000">
                      <font>
                         <Font name="System Bold" size="15.0" />
@@ -37,14 +35,10 @@
                   </Button>
                   <Separator layoutX="311.0" layoutY="1.0" orientation="VERTICAL" prefHeight="700.0" prefWidth="21.0" />
                   <ImageView fitHeight="56.0" fitWidth="46.0" layoutX="14.0" layoutY="186.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
                         <Image url="@../images/logo_registro.png" />
-                     </image>
                   </ImageView>
                   <ImageView fitHeight="80.0" fitWidth="100.0" layoutX="20.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
                         <Image url="@../images/logo_app.png" />
-                     </image>
                   </ImageView>
                   <Separator layoutY="116.0" prefHeight="3.0" prefWidth="322.0" />
                   <Text fill="#e5a000" layoutX="117.0" layoutY="72.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Gym System">
@@ -53,33 +47,20 @@
                      </font>
                   </Text>
                   <ImageView fitHeight="56.0" fitWidth="46.0" layoutX="14.0" layoutY="253.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
                         <Image url="@../images/logo_registro.png" />
-                     </image>
                   </ImageView>
                   <ImageView fitHeight="56.0" fitWidth="46.0" layoutX="14.0" layoutY="320.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
                         <Image url="@../images/logo_registro.png" />
-                     </image>
                   </ImageView>
                   <ImageView fitHeight="56.0" fitWidth="46.0" layoutX="14.0" layoutY="385.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
                         <Image url="@../images/logo_registro.png" />
-                     </image>
                   </ImageView>
-               </children>
             </AnchorPane>
             <AnchorPane layoutX="781.0" layoutY="-6.0" prefHeight="80.0" prefWidth="100.0">
-               <children>
                   <ImageView fitHeight="80.0" fitWidth="100.0" layoutX="15.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="22.0">
-                     <image>
                         <Image url="@../images/sair.png" />
-                     </image>
                   </ImageView>
-                  <Button fx:id="BSairDoApp" layoutX="5.0" layoutY="11.0" mnemonicParsing="false" onAction="#handleSair" prefHeight="80.0" prefWidth="100.0" style="-fx-background-color: transparent;" text="" />
-               </children>
+                  <Button fx:id="BSairDoApp" layoutX="5.0" layoutY="11.0" mnemonicParsing="false" onAction="#handleSair" prefHeight="80.0" prefWidth="100.0" style="-fx-background-color: transparent;" />
             </AnchorPane>
-         </children>
       </AnchorPane>
-   </children>
 </VBox>
