--- a/src/main/resources/fxml/IndicadoresView.fxml
+++ b/src/main/resources/fxml/IndicadoresView.fxml
@@ -10,9 +10,7 @@
 
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" style="-fx-background-color: #2c2c2c;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.upe.controller.IndicadoresViewController">
-   <children>
       <AnchorPane layoutY="-2.0" prefHeight="700.0" prefWidth="317.0">
-         <children>
             <Button fx:id="BCadastrarIN" alignment="CENTER" contentDisplay="CENTER" layoutX="66.0" layoutY="194.0" mnemonicParsing="false" onAction="#cadastrarNovoIndicador" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1E1E1E;" text="Cadastrar novo indicador" textFill="#e5a000">
                <font>
                   <Font name="System Bold" size="15.0" />
@@ -24,9 +22,7 @@
                </font>
             </Button>
             <ImageView fitHeight="80.0" fitWidth="100.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
-               <image>
                   <Image url="@../images/coracao.png" />
-               </image>
             </ImageView>
             <Separator layoutY="109.0" prefHeight="7.0" prefWidth="320.0" />
             <Separator layoutX="320.0" layoutY="-2.0" orientation="VERTICAL" prefHeight="706.0" prefWidth="0.0" />
@@ -36,26 +32,16 @@
                </font>
             </Text>
             <ImageView fitHeight="56.0" fitWidth="45.0" layoutX="14.0" layoutY="264.0" pickOnBounds="true" preserveRatio="true">
-               <image>
                   <Image url="@../images/logo_registro.png" />
-               </image>
             </ImageView>
             <ImageView fitHeight="56.0" fitWidth="45.0" layoutX="14.0" layoutY="192.0" pickOnBounds="true" preserveRatio="true">
-               <image>
                   <Image url="@../images/coracao.png" />
-               </image>
             </ImageView>
-         </children>
       </AnchorPane>
       <AnchorPane layoutX="779.0" layoutY="-22.0" prefHeight="140.0" prefWidth="130.0">
-         <children>
             <ImageView fx:id="IFechar" fitHeight="80.0" fitWidth="100.0" layoutX="25.0" layoutY="30.0" onMouseClicked="#voltar" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="30.0">
-               <image>
                   <Image url="@../images/sair.png" />
-               </image>
             </ImageView>
-            <Button fx:id="sairB" layoutX="15.0" layoutY="30.0" mnemonicParsing="false" onAction="#handleSair" prefHeight="80.0" prefWidth="100.0" style="-fx-background-color: transparent;" text="" />
-         </children>
+            <Button fx:id="sairB" layoutX="15.0" layoutY="30.0" mnemonicParsing="false" onAction="#handleSair" prefHeight="80.0" prefWidth="100.0" style="-fx-background-color: transparent;" />
       </AnchorPane>
-   </children>
 </AnchorPane>
