--- a/src/main/resources/fxml/MenuUsuarioLogado.fxml
+++ b/src/main/resources/fxml/MenuUsuarioLogado.fxml
@@ -10,23 +10,15 @@
 <?import javafx.scene.text.Text?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" style="-fx-background-color: #2C2C2C;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.upe.controller.MenuUsuarioLogadoController">
-    <children>
       <AnchorPane layoutX="800.0" layoutY="-14.0" prefHeight="80.0" prefWidth="100.0">
-         <children>
             <ImageView fitHeight="80.0" fitWidth="100.0" layoutX="10.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="23.0">
-               <image>
                   <Image url="@../images/sair.png" />
-               </image>
             </ImageView>
-            <Button fx:id="sairB" layoutX="10.0" layoutY="23.0" mnemonicParsing="false" onAction="#handleSair" prefHeight="80.0" prefWidth="80.0" style="-fx-background-color: transparent;" text="" />
-         </children>
+            <Button fx:id="sairB" layoutX="10.0" layoutY="23.0" mnemonicParsing="false" onAction="#handleSair" prefHeight="80.0" prefWidth="80.0" style="-fx-background-color: transparent;"/>
       </AnchorPane>
       <AnchorPane layoutX="3.0" prefHeight="700.0" prefWidth="317.0">
-         <children>
             <ImageView fitHeight="56.0" fitWidth="45.0" layoutX="8.0" layoutY="193.0" pickOnBounds="true" preserveRatio="true">
-               <image>
                   <Image url="@../images/halter_pequeno.png" />
-               </image>
             </ImageView>
             <Button fx:id="meusTreinosB" layoutX="57.0" layoutY="195.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1E1E1E;" text="Meus Treinos" textFill="#e5a000">
                <opaqueInsets>
@@ -37,9 +29,7 @@
                </font>
             </Button>
             <ImageView fitHeight="56.0" fitWidth="45.0" layoutX="8.0" layoutY="263.0" pickOnBounds="true" preserveRatio="true">
-               <image>
                   <Image url="@../images/coracao.png" />
-               </image>
             </ImageView>
             <Button fx:id="meusIndicadoresB" layoutX="57.0" layoutY="265.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1E1E1E;" text="Meus Indicadores" textFill="#e5a000">
                <opaqueInsets>
@@ -50,9 +40,7 @@
                </font>
             </Button>
             <ImageView fitHeight="56.0" fitWidth="45.0" layoutX="8.0" layoutY="467.0" pickOnBounds="true" preserveRatio="true">
-               <image>
                   <Image url="@../images/salvar.png" />
-               </image>
             </ImageView>
             <Button fx:id="exportarRelatoriosB" layoutX="59.0" layoutY="469.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1E1E1E;" text="Exportar Relatórios" textFill="#e5a000">
                <opaqueInsets>
@@ -63,9 +51,7 @@
                </font>
             </Button>
             <ImageView fitHeight="56.0" fitWidth="45.0" layoutX="8.0" layoutY="329.0" pickOnBounds="true" preserveRatio="true">
-               <image>
                   <Image url="@../images/logo_registro.png" />
-               </image>
             </ImageView>
             <Button fx:id="gerenciarPlanosB" layoutX="57.0" layoutY="334.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1E1E1E;" text="Gerenciar Planos De Treinos" textFill="#e5a000">
                <opaqueInsets>
@@ -76,9 +62,7 @@
                </font>
             </Button>
             <ImageView fitHeight="56.0" fitWidth="45.0" layoutX="8.0" layoutY="398.0" pickOnBounds="true" preserveRatio="true">
-               <image>
                   <Image url="@../images/muque.png" />
-               </image>
             </ImageView>
             <Button fx:id="gerenciarExerciciosB" layoutX="57.0" layoutY="401.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1E1E1E;" text="Gerenciar Exercícios" textFill="#e5a000">
                <opaqueInsets>
@@ -89,9 +73,7 @@
                </font>
             </Button>
             <ImageView fitHeight="80.0" fitWidth="100.0" layoutX="19.0" layoutY="21.0" pickOnBounds="true" preserveRatio="true">
-               <image>
                   <Image url="@../images/logo_app.png" />
-               </image>
             </ImageView>
             <Separator layoutX="314.0" layoutY="-2.0" orientation="VERTICAL" prefHeight="707.0" prefWidth="4.0" />
             <Separator layoutX="-5.0" layoutY="114.0" prefHeight="3.0" prefWidth="320.0" />
@@ -100,7 +82,5 @@
                   <Font name="System Bold" size="24.0" />
                </font>
             </Text>
-         </children>
       </AnchorPane>
-    </children>
 </AnchorPane>
